--- a/AdvancedControls/res/xml/main.xml
+++ b/AdvancedControls/res/xml/main.xml
@@ -15,7 +15,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Dirac -->
-    <PreferenceCategory
+    <!--<PreferenceCategory
         android:title="@string/category_sound"
         android:key="key_category_sound">
         <Preference
@@ -28,7 +28,7 @@
                 android:targetPackage="org.lineageos.settings"
                 android:targetClass="org.lineageos.settings.dirac.DiracActivity" />
         </Preference>
-    </PreferenceCategory>
+    </PreferenceCategory>-->
 
     <!-- Vibrator -->
     <PreferenceCategory
@@ -66,7 +66,8 @@
             android:title="@string/presets_list_title"
             android:entries="@array/presets_entries"
             android:entryValues="@array/presets_values"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            android:summary="%s" />
     </PreferenceCategory>
 
     <!-- Kcal RGB -->
